--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">murmur1</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="open">Open</string>
+    <string name="close">close</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
